Maps and references for T2 and T3

--- a/_EFGs/T2.5.md
+++ b/_EFGs/T2.5.md
@@ -23,13 +23,16 @@ There is an annual water surplus, but with seasonal variation (peak surplus in w
 
 Temperate southeast and southwest Australia.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Wardell-Johnson G, Neldner J, Balmer J (2017) Wet sclerophyll forests. In 'Australian vegetation' (Ed. DA Keith), pp281-313. Cambridge University Press, Cambridge. / Mac Nally RC (1995) On large-scale dynamics and community structure in forest birds: Lessons from some eucalypt forests of southeastern Australia. Philosophical Transactions of the Royal Society B 350B: 369-79.
+
+* Wardell-Johnson G, Neldner J, Balmer J (2017) Wet sclerophyll forests. In 'Australian vegetation' (Ed. DA Keith), pp281-313. Cambridge University Press, Cambridge.
+* Mac Nally RC (1995) On large-scale dynamics and community structure in forest birds: Lessons from some eucalypt forests of southeastern Australia. Philosophical Transactions of the Royal Society B 350B: 369-79.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
