--- a/_EFGs/T2.1.md
+++ b/_EFGs/T2.1.md
@@ -23,13 +23,18 @@ These systems are driven by large seasonal temperature ranges, cold winters with
 
 Boreal distribution across Eurasia and North America, extending to temperate (rarely subtropical) latitudes on mountains.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
 
 ## References
+
 ### Text references
-* Bonan GB, Shugart HH (1989) Environmental Factors and Ecological Processes in Boreal Forests. Annual Review of Ecology and Systematics 20: 1-28. / Crawford RMM (2013) Tundra-taiga biology. Ch 5. Oxford University Press, Oxford. / Larsen JA (1980) The boreal ecosystem. Academic Press, New York.
+
+* Bonan GB, Shugart HH (1989) Environmental Factors and Ecological Processes in Boreal Forests. Annual Review of Ecology and Systematics 20: 1-28.
+* Crawford RMM (2013) Tundra-taiga biology. Ch 5. Oxford University Press, Oxford.
+* Larsen JA (1980) The boreal ecosystem. Academic Press, New York.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
