--- a/_EFGs/T2.2.md
+++ b/_EFGs/T2.2.md
@@ -15,7 +15,6 @@ contributors: DA Keith / NA Brummitt / F Essl / D Faber-Langendoen,
 
 # Key-ecological-drivers
 
-
  Phenological processes in these forests are driven by large seasonal temperature ranges, (mean winter temperatures <-1°C, summer means  up to 22°C), typically with substantial winter snow and limited growing season, with 4-6 months above 10°C, and severe post-thaw frosts. Fertile soils, especially with high N levels, and an overall water surplus, support deciduous leaf turnover. Fires are generally uncommon.
 
 # Diagramatic assembly model
@@ -27,13 +26,16 @@ contributors: DA Keith / NA Brummitt / F Essl / D Faber-Langendoen,
 
 Cool temperate Europe (southwest Russia to British Isles), northeast Asia (northeast China, southern Siberia Korea, Japan) northeast America. Limited occurrences in warm temperate zones of south Europe and Asia, and midwest USA.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
+ {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
 ## References
+
 ### Text references
 * Röhrig E, Ulrich B (1991) Temperate deciduous forests. Ecosystems of the world. Vol. 7. Elsevier, Amsterdam.  / Box EO, Fujiwara K (2015) Warm temperate deciduous forests. Springer, Cham.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
