--- a/_EFGs/T2.3.md
+++ b/_EFGs/T2.3.md
@@ -24,13 +24,17 @@ There is a large overall water surplus, rarely with summer deficits. Rainfall is
 
 Cool temperate coasts of Chile and Patagonia, New Zealand, Tasmania and Pacific northwest, rarely extending to warm temperate latitudes on mountains in Chile, southeast Australia and outliers above 2500 m elevation in the New Guinea highlands. Some authors extend the concept to wet boreal forests on coasts of northwest Europe, Japan and northeast Canada.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* DallaSala DA, Alaback P, Spribille T, von Wehrden H, Nauman RS (2011) Just what are temperate and boreal rainforests? In: Temperate and boreal rainforests of the world: ecology and conservation (Ed. DA DellaSala), pp1-41. Island Press, Washington DC. / McGlone MS, Buitenwerf R, Richardson SJ (2016) The formation of the oceanic temperate forests of New Zealand. New Zealand Journal of Botany. 54:128-155. / McGlone MS, Lusk CH, Armesto JJ (2016) Biogeography and ecology of south-temperate forests. New Zealand Journal of Botany 54: 94-99.
+
+* DallaSala DA, Alaback P, Spribille T, von Wehrden H, Nauman RS (2011) Just what are temperate and boreal rainforests? In: Temperate and boreal rainforests of the world: ecology and conservation (Ed. DA DellaSala), pp1-41. Island Press, Washington DC.
+* McGlone MS, Buitenwerf R, Richardson SJ (2016) The formation of the oceanic temperate forests of New Zealand. New Zealand Journal of Botany. 54:128-155.
+* McGlone MS, Lusk CH, Armesto JJ (2016) Biogeography and ecology of south-temperate forests. New Zealand Journal of Botany 54: 94-99.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
