--- a/_EFGs/T2.4.md
+++ b/_EFGs/T2.4.md
@@ -23,13 +23,16 @@ The environmental niche of these forests is defined by a modest overall water su
 
 Patchy warm temperate distribution 26-43° latitude, north or south of the Equator (east Asia, southeast Australia, New Zealand, southeast USA, Mexico, central Chile, South Africa and the Azores).
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Grubb PJ, Bellingham PJ, Kohyama TS, Piper FS Valido A (2013) Disturbance regimes, gap-demanding trees and seed mass related to tree height in warm temperate rain forests worldwide. Biol. Rev. 88: 701–744. doi: 10.1111/brv.12029. / Mucina L (2018) Vegetation survey and classification of subtropical forests of southern Africa. Springer, Cham.
+
+* Grubb PJ, Bellingham PJ, Kohyama TS, Piper FS Valido A (2013) Disturbance regimes, gap-demanding trees and seed mass related to tree height in warm temperate rain forests worldwide. Biol. Rev. 88: 701–744. doi: 10.1111/brv.12029.
+* Mucina L (2018) Vegetation survey and classification of subtropical forests of southern Africa. Springer, Cham.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
