--- a/_EFGs/T2.6.md
+++ b/_EFGs/T2.6.md
@@ -23,13 +23,16 @@ Hot summers generate a marked but variable summer water deficit, usually with a 
 
 Temperate regions of Australia, the Mediterranean and central California.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Barbour M, Keeler-Wolf  T, Schoenherr AA (2007) Terrestrial vegetation of California. 3rd edition. University of California Press, Berkeley. / Tozer MG, Simpson CC, Jansens IB, Keith DA (2017) Biogeography of Australia’s dry sclerophyll forests: drought, nutrients and fire. In: Australian vegetation. (Ed. DA Keith), pp314-338. Cambridge University Press, Cambridge.
+
+* Barbour M, Keeler-Wolf  T, Schoenherr AA (2007) Terrestrial vegetation of California. 3rd edition. University of California Press, Berkeley.
+* Tozer MG, Simpson CC, Jansens IB, Keith DA (2017) Biogeography of Australia’s dry sclerophyll forests: drought, nutrients and fire. In: Australian vegetation. (Ed. DA Keith), pp314-338. Cambridge University Press, Cambridge.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
