--- a/_EFGs/T3.1.md
+++ b/_EFGs/T3.1.md
@@ -23,13 +23,16 @@ A severe seasonal climatic water deficit during tropical 'winter' months is exac
 
 Brazilian campos rupestres, Venezuelan tepui, Florida sands and scattered in northern Australia and montane oceanic islands.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Morellato LPC, Silveira.FAO (2018.) Plant life in campo rupestre: New lessons from an ancient biodiversity hotspot. Flora 238: 1-10. / Russell-Smith J, Ryan PG, Klessa D, Waight G, Harwood R (1998) Fire regimes, fire-sensitive vegetation, and fire management of the sandstone Arnhem Plateau, monsoonal northern Australia. Journal of Applied Ecology 35, 829-846.
+
+* Morellato LPC, Silveira.FAO (2018.) Plant life in campo rupestre: New lessons from an ancient biodiversity hotspot. Flora 238: 1-10.
+* Russell-Smith J, Ryan PG, Klessa D, Waight G, Harwood R (1998) Fire regimes, fire-sensitive vegetation, and fire management of the sandstone Arnhem Plateau, monsoonal northern Australia. Journal of Applied Ecology 35, 829-846.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
