--- a/_EFGs/T3.3.md
+++ b/_EFGs/T3.3.md
@@ -23,13 +23,16 @@ Unlike most other heathlands, these ecosystems have an overall water surplus, th
 
 Boreal and cool temperate coasts of western Europe and America, Azores, Magellanic region of South America, mostly at latitudes >40° latitude except where transitional with warm temperate heaths (e.g. France-Spain).
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Aerts R, Heil GW (1993) Heathlands: patterns and processes in a changing environment. Kluwer Academic Publishing. / Loidi J, Biurrun I, Juan Antonio Campos JA, García-Mijangos I, Herrera M (2010) A biogeographical analysis of the European Atlantic lowland heathlands. Journal of Vegetation Science 21: 832–842.
+
+* Aerts R, Heil GW (1993) Heathlands: patterns and processes in a changing environment. Kluwer Academic Publishing.
+* Loidi J, Biurrun I, Juan Antonio Campos JA, García-Mijangos I, Herrera M (2010) A biogeographical analysis of the European Atlantic lowland heathlands. Journal of Vegetation Science 21: 832–842.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
