--- a/_EFGs/T3.4.md
+++ b/_EFGs/T3.4.md
@@ -23,13 +23,17 @@ Skeletal substrates (e.g. lava pavements, scree slopes, rock outcrops) limit wa
 
 Localised areas scattered around the Pacific rim, African Rift Valley, Mediterranean and north Atlantic.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Anderson-Teixeira KJ, Vitousek PM, Brown JH (2007) Amplified temperature dependence in ecosystems developing on the lava flows of Mauna Loa, Hawai’i. PNAS 105: 228-233. / Crews TE, Kurina, LM, Vitousek PM (2001) Organic matter and nitrogen accumulation and nitrogen fixation during early ecosystem development in Hawaii. Biogeochemistry 52: 259-279. / Cutler NA, Belyea LR, Dugmore AJ (2008) The spatiotemporal dynamics of a primary succession. Journal of Ecology 96: 231-246.
+
+* Anderson-Teixeira KJ, Vitousek PM, Brown JH (2007) Amplified temperature dependence in ecosystems developing on the lava flows of Mauna Loa, Hawai’i. PNAS 105: 228-233.
+* Crews TE, Kurina, LM, Vitousek PM (2001) Organic matter and nitrogen accumulation and nitrogen fixation during early ecosystem development in Hawaii. Biogeochemistry 52: 259-279.
+* Cutler NA, Belyea LR, Dugmore AJ (2008) The spatiotemporal dynamics of a primary succession. Journal of Ecology 96: 231-246.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
