maps and references for T4, T5, T6

--- a/_EFGs/T4.3.md
+++ b/_EFGs/T4.3.md
@@ -23,13 +23,16 @@ Large overall rainfall deficit up to c. 2000mm, always with a seasonal (winter) 
 
 Rocky areas of the seasonal Australian tropics extending to the semi-arid zone.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Lehmann CER, Anderson TM, Sankaran M, Higgins SI, Archibald S, Hoffmann WA, et al. (2014). Savanna vegetation-fire-climate relationships differ among continents. Science 343, 548-552. / Williams RJ, Cook GD, Liedloff AC, Bond WJ (2017) Australia's tropical savannas: vast ancient and rich landscapes. In: 'Australian vegetation' (Ed. DA Keith), pp368-388. Cambridge University Press, Cambridge.
+
+* Lehmann CER, Anderson TM, Sankaran M, Higgins SI, Archibald S, Hoffmann WA, et al. (2014). Savanna vegetation-fire-climate relationships differ among continents. Science 343, 548-552.
+* Williams RJ, Cook GD, Liedloff AC, Bond WJ (2017) Australia's tropical savannas: vast ancient and rich landscapes. In: 'Australian vegetation' (Ed. DA Keith), pp368-388. Cambridge University Press, Cambridge.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
