--- a/_EFGs/T4.1.md
+++ b/_EFGs/T4.1.md
@@ -23,13 +23,16 @@ Trophic savannas like pyric savannas are driven by seasonal climates, but genera
 
 Seasonal tropics and subtropics of Africa and Asia.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Archibald S, Hempson GP (2016) Competing consumers: contrasting the patterns and impacts of fire and mammalian herbivory in Africa. Phil Trans R Soc B. 371: 20150309. / Hempson GP, Archibald S, Bond WJ, Ellis RP, Grant CC, Kruger FJ, et al. (2015) Ecology of grazing lawns in Africa. Biological Reviews 90: 979–994.
+
+* Archibald S, Hempson GP (2016) Competing consumers: contrasting the patterns and impacts of fire and mammalian herbivory in Africa. Phil Trans R Soc B. 371: 20150309.
+* Hempson GP, Archibald S, Bond WJ, Ellis RP, Grant CC, Kruger FJ, et al. (2015) Ecology of grazing lawns in Africa. Biological Reviews 90: 979–994.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
