--- a/_EFGs/T4.4.md
+++ b/_EFGs/T4.4.md
@@ -23,13 +23,16 @@ A water deficit occurs seasonally in summer, driven primarily by peak evapotrans
 
 Temperate southeast and southwest Australia, Patagonia and Pampas of South America, western and eastern North America, the Mediterranean region and temperate Eurasia.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Gibson GJ (2009) Grasses and grassland ecology. Oxford University Press, Oxford. / Prober SM, Gosper CR, Gilfedder L, Harwood TD, Thiele KR, Williams KJ, Yates CJ (2017) Temperate eucalypt woodlands. In: Australian vegetation (Ed. DA Keith), pp410-437. Cambridge University Press, Cambridge. / Davis FW, Baldocchi D, Tyler C (2016) Oak woodlands. In Ecosystems of California (Eds. HA Mooney, E Zavaleta), pp509-534. University of California Press, Berkeley.
+
+* Gibson GJ (2009) Grasses and grassland ecology. Oxford University Press, Oxford. / Prober SM, Gosper CR, Gilfedder L, Harwood TD, Thiele KR, Williams KJ, Yates CJ (2017) Temperate eucalypt woodlands. In: Australian vegetation (Ed. DA Keith), pp410-437. Cambridge University Press, Cambridge.
+* Davis FW, Baldocchi D, Tyler C (2016) Oak woodlands. In Ecosystems of California (Eds. HA Mooney, E Zavaleta), pp509-534. University of California Press, Berkeley.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
