--- a/_EFGs/T5.1.md
+++ b/_EFGs/T5.1.md
@@ -23,13 +23,15 @@ Semi-desert steppes is associated with fine-textured, non-acid soils of low-mode
 
 Extensive areas across the Sahara, Arabian Peninsula and west Asia, southwest Africa, southern Australia, Argentina and midwest USA.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-TEOW
-
 ## References
+
 ### Text references
+
 * Eldridge DJ, Travers SK, Facelli AF, Facelli JM, Keith DA (2017) The Chenopod shrublands. In: Australian vegetation. (Ed. DA Keith), pp599-625. Cambridge University Press, Cambridge.
+
 ### Map References
-*
+
+* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
