--- a/_EFGs/T5.3.md
+++ b/_EFGs/T5.3.md
@@ -25,16 +25,18 @@ Resource availability is limited by a large overall water deficit (rainfall <250
 
 # Distribution
 
-
 Mid latitudes on sandy substrates of central and northwestern Australia.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Keith DA (2004) Ocean shores to desert dunes: the native vegetation of NSW and the ACT. NSW Department of Environment and Conservation, Sydney. / Morton S, Stafford Smith DM, Dickman CR, Dunkerley DL, Friedel MH, McAllister RRJ, Reid RW, Roshier DA, Smith MA, Walsh FJ, Wardle GM, Watson IW, Westoby M (2011) A fresh framework for the ecology of arid Australia. Journal of Arid Environments 75: 313-329.
+
+* Keith DA (2004) Ocean shores to desert dunes: the native vegetation of NSW and the ACT. NSW Department of Environment and Conservation, Sydney.
+* Morton S, Stafford Smith DM, Dickman CR, Dunkerley DL, Friedel MH, McAllister RRJ, Reid RW, Roshier DA, Smith MA, Walsh FJ, Wardle GM, Watson IW, Westoby M (2011) A fresh framework for the ecology of arid Australia. Journal of Arid Environments 75: 313-329.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
