--- a/_EFGs/T5.4.md
+++ b/_EFGs/T5.4.md
@@ -23,13 +23,16 @@ Mean annual precipitation is similar to most warm deserts (<250mm) due to rainsh
 
 Cool temperate plains and plateaus from sea level to 4000m elevation in central Eurasia, western North America, Patagonia. Extreme cold deserts are placed in the polar/alpine biome.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Johnson SL, Kuske CR, Carney TD, Housman DC, Gallegos-Graves LV, Belnap J (2012) Increased temperature and altered summer precipitation have differential effects on biological soil crusts in a dryland ecosystem. Global Change Biology 18: 2583-2593. / West NE (1983) Comparisons and contrasts between the temperate deserts and semi-deserts of three continents. In:  Ecosystems of the World vol. 5: Temperate deserts and semi-deserts (Ed. NE West). Elsevier, Amsterdam.
+
+* Johnson SL, Kuske CR, Carney TD, Housman DC, Gallegos-Graves LV, Belnap J (2012) Increased temperature and altered summer precipitation have differential effects on biological soil crusts in a dryland ecosystem. Global Change Biology 18: 2583-2593.
+* West NE (1983) Comparisons and contrasts between the temperate deserts and semi-deserts of three continents. In:  Ecosystems of the World vol. 5: Temperate deserts and semi-deserts (Ed. NE West). Elsevier, Amsterdam.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
