final round of maps and references for T7 and TF1

--- a/_EFGs/T7.1.md
+++ b/_EFGs/T7.1.md
@@ -23,16 +23,16 @@ High to moderate natural availability of water (from at least seasonally high ra
 
 Tropical to temperate humid climatic zones or river flats in dry climates across south sub-Saharan and far north Africa, Europe, Asia, southern and southwestern Australasia, Oceania and the Americas.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} The indicative distribution of crop lands was estimated using the percentage cover of crop lands at 5' resolution from the Hyde 3.1 dataset (Klein Goldewijk & van Drecht 2006), with a threshold of 1% for minor occurrences and 10% for major occurrences. {% endcapture %}
 {% include MAP.html %}
 
-The indicative distribution of crop lands was estimated using the percentage cover of crop lands at 5' resolution from the Hyde 3.1 dataset (Klein Goldewijk & van Drecht 2006), with a threshold of 1% for minor occurrences and 10% for major occurrences.
 
 ## References
 
 ### Text references
 
-* Leff B, Ramankutty N, Foley JA (2004) Geographic distribution of major crops across the world. Global Biogeochemical Cycles 18(1), GB1009. / Ray DK., Foley JA (2013) Increasing global crop harvest frequency: recent trends and future directions. Environmental Research Letters 8(4): 044041.
+* Leff B, Ramankutty N, Foley JA (2004) Geographic distribution of major crops across the world. Global Biogeochemical Cycles 18(1), GB1009.
+* Ray DK., Foley JA (2013) Increasing global crop harvest frequency: recent trends and future directions. Environmental Research Letters 8(4): 044041.
 
 ### Map References
 
