--- a/_EFGs/T7.2.md
+++ b/_EFGs/T7.2.md
@@ -23,13 +23,16 @@ High to moderate natural availability of water (from rainfall) and nutrients (fr
 
 Mostly in subtropical to temperate climatic zones and developed countries across Europe, east and south Asia, subtropical and temperate Africa, southern Australasia, north and central America and temperate south America.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts. {% endcapture %}
 {% include MAP.html %}
 
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
-
 ## References
+
 ### Text references
-* Bernués A, Ruiz R, Olaizola A, Villalba D, Casasús I (2011) Sustainability of pasture-based livestock farming systems in the European Mediterranean context: Synergies and trade-offs. Livestock Science 139: 44–57. / Spedding CRW (1986) Animal production from grass: A systems approach. In: Bioindustrial ecosystems (Eds. DAJ Cole, GC Brander), pp107-120. Ecosystems of the world vol. 21. Elsevier, Amsterdam.
+
+* Bernués A, Ruiz R, Olaizola A, Villalba D, Casasús I (2011) Sustainability of pasture-based livestock farming systems in the European Mediterranean context: Synergies and trade-offs. Livestock Science 139: 44–57.
+* Spedding CRW (1986) Animal production from grass: A systems approach. In: Bioindustrial ecosystems (Eds. DAJ Cole, GC Brander), pp107-120. Ecosystems of the world vol. 21. Elsevier, Amsterdam.
+
 ### Map References
+
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
