reviewing all profiles for Freshwater biomes, minor changes

--- a/_EFGs/F3.4.md
+++ b/_EFGs/F3.4.md
@@ -23,7 +23,7 @@ Aquafarms are small artificial water bodies with low horizontal and vertical het
 
 Concentrated in Asia but also in parts of north and west Europe, north and west Africa, South America, North America, and small areas of southeast Australia and New Zealand.
 
-{% capture map_det %}  {% endcapture %}
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
 {% include MAP.html %}
 
 ## References
