reviewing all temperate profiles, minor edits and additions

--- a/_EFGs/T2.2.md
+++ b/_EFGs/T2.2.md
@@ -23,18 +23,18 @@ contributors: DA Keith / NA Brummitt / F Essl / D Faber-Langendoen,
 
 # Distribution
 
-
 Cool temperate Europe (southwest Russia to British Isles), northeast Asia (northeast China, southern Siberia Korea, Japan) northeast America. Limited occurrences in warm temperate zones of south Europe and Asia, and midwest USA.
 
 {% capture map_det %} Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
  {% endcapture %}
 {% include MAP.html %}
 
-
 ## References
 
 ### Text references
-* Röhrig E, Ulrich B (1991) Temperate deciduous forests. Ecosystems of the world. Vol. 7. Elsevier, Amsterdam.  / Box EO, Fujiwara K (2015) Warm temperate deciduous forests. Springer, Cham.
+
+* Röhrig E, Ulrich B (1991) Temperate deciduous forests. Ecosystems of the world. Vol. 7. Elsevier, Amsterdam.  
+* Box EO, Fujiwara K (2015) Warm temperate deciduous forests. Springer, Cham.
 
 ### Map References
 
