fix broken map link

--- a/_EFGs/F2.10.md
+++ b/_EFGs/F2.10.md
@@ -26,11 +26,7 @@ In preparation
 Some ~400 subglacial lakes in Antarctica, ~60 in Greenland and a few in Iceland and Canada have been identified from radar remote sensing and modelling.
 
 Map in preparation
-<!--//
-{% capture map_det %}  {% endcapture %}
-
-{% include MAP.html %}
-//-->
+<!--// {% capture map_det %}  {% endcapture %} {% include MAP.html %} //-->
 
 ## References
 
@@ -42,4 +38,4 @@ Map in preparation
 
 ### Map References
 
-* 
+*
