Updating all profiles to newest version

--- a/_EFGs/T6.3.md
+++ b/_EFGs/T6.3.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T6.3
 biomecode: T6
 contributors: DA Keith, D Faber-Langendoen
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Winters are very cold and dark and summers define short, cool growing seasons wi
 Primarily the within Arctic Circle and adjacent Subarctic regions, with smaller occurrences on Subantarctic islands and the Antarctic coast.
 
 {% capture map_det %}
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
+We first identified areas corresponding to tundra climatic zone according to the Köppen-Geiger classification system (Beck et al. 2018), and selected areas in high latitudes corresponding with low annual solar radiation (Beckmann et al. 2014). A composite map was created at 30 seconds spatial resolution in geographic projection, occurrences were then aggregated to half degree spatial resolution and reclassified cells as major occurrences (>80%) and minor occurrences (> 30%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -33,4 +33,5 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 ### Main references
 * Crawford RMM (2013) Tundra-taiga biology. Ch 5. Oxford University Press, Oxford.
 ### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
+* Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
+* Beckmann M., Václavík T., Manceur A.M., Šprtová L., von Wehrden H., Welk E., Cord A.F. (2014) *glUV: A global UV-B radiation dataset for macroecological studies*, **Methods in Ecology and Evolution**, 5: 372–383. doi: [10.1111/2041-210X.12168](http://doi.org/10.1111/2041-210X.12168)
