--- a/_EFGs/T2.2.md
+++ b/_EFGs/T2.2.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T2.2
 biomecode: T2
 contributors: DA Keith, NA Brummitt, F Essl, D Faber-Langendoen
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -31,7 +31,7 @@ Cool temperate Europe (southwest Russia to British Isles), northeast Asia (north
 
 
 {% capture map_det %}
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
+Areas of deciduous and mixed forest cover were identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to areas with temperate climates in the northern hemisphere (Karger et al. 2017), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -40,4 +40,5 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Röhrig E, Ulrich B (1991) Temperate deciduous forests. Ecosystems of the world. Vol. 7. Elsevier, Amsterdam. 
 * Box EO, Fujiwara K (2015) Warm temperate deciduous forests. Springer, Cham.
 ### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
+* Tuanmu, M.-N. and W. Jetz. 2014. A global 1-km consensus land-cover product for biodiversity and ecosystem modeling. Global Ecology and Biogeography 23(9): 1031-1045.
+* Karger, D.N., Conrad, O., Böhner, J., Kawohl, T., Kreft, H., Soria-Auza, R.W., Zimmermann, N.E., Linder, H.P. & Kessler, M. (2017) *Climatologies at high resolution for the earth’s land surface areas*. **Scientific Data** 4, 170122.
