Update map information for F2 profiles

--- a/_EFGs/F2.6.md
+++ b/_EFGs/F2.6.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F2.6
 biomecode: F2
 contributors: RT Kingsford, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Permanent salt lakes tend to be large and restricted to semi-arid climates with 
 Mostly in semi-arid regions of Africa, Australia, Eurasia and western parts of North and South America.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+A list of known salt lakes (major occurrences) was taken from Wurtsbaugh et al. (2017) and other references and matched with names in the HydroLAKES database (Messager et al. 2016). Lakes in arid and semi-arid regions (calculated from Harris et al. 2014) were also included as minor occurrences.
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,6 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Humayoun SB, Bano N, Hollibaugh JT (2003) Depth distribution of microbial diversity in Mono Lake, a meromictic soda lake in California. Applied and environmental microbiology 69:1030-1042.
 * Williams WD (1998) Salinity as a determinant of the structure of biological communities in salt lakes. Hydrobiologia 381:191-201.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Messager, M.L., Lehner, B., Grill, G., Nedeva, I., Schmitt, O. (2016): *Estimating the volume and age of water stored in global lakes using a geo-statistical approach*. **Nature Communications**: 13603. doi: [10.1038/ncomms13603](http://doi.org/10.1038/ncomms13603)
+* Wurtsbaugh, W., Miller, C., Null, S. et al. *Decline of the world's saline lakes*. **Nature Geoscience** 10, 816–821 (2017). [10.1038/ngeo3052](https://doi.org/10.1038/ngeo3052)
+* Harris, I., Jones, P.D., Osborn, T.J. and Lister, D.H. (2014), *Updated high-resolution grids of monthly climatic observations - the CRU TS3.10 Dataset*. **International Journal of Climatology** 34, 623-642 [doi:10.1002/joc.3711](http://dx.doi.org/10.1002/joc.3711) [Revised appendix](https://crudata.uea.ac.uk/cru/data/hrg/Revised_Appendix_3_CLD.pdf)
