--- a/_EFGs/T5.5.md
+++ b/_EFGs/T5.5.md
@@ -35,3 +35,4 @@ We calculated the aridity index (AI, UNEP 1992) using  spatio-temporal series of
 * Rundel P W, Dillon MO, Palma B, Mooney HA, Gulmon SL, Ehleringer JR (1991) The phytogeography and ecology of the coastal Atacama and Peruvian deserts. Aliso 13(1): 2.
 ### Map References
 * Harris, I., Jones, P.D., Osborn, T.J. and Lister, D.H. (2014), *Updated high-resolution grids of monthly climatic observations - the CRU TS3.10 Dataset*. **International Journal of Climatology** 34, 623-642 [doi:10.1002/joc.3711](http://dx.doi.org/10.1002/joc.3711) [Revised appendix](https://crudata.uea.ac.uk/cru/data/hrg/Revised_Appendix_3_CLD.pdf)
+* UNEP (1992) World atlas of desertification, edited by N. Middleton and D. S. G. Thomas. Edward Arnold (United Nations Environment Programme), London. ISBN 0 340 55512 2
