--- a/_EFGs/F2.1.md
+++ b/_EFGs/F2.1.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F2.1
 biomecode: F2
 contributors: RT Kingsford, RC Mac Nally, LJ Jackson, F Essl, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Large water volumes influence resource availability, environmental stability (th
 Humid temperate and tropical regions on large land masses.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+Location of large lakes was taken from the HydroLAKES database (Messager et al. 2016), lakes in boreal and polar climates were excluded (Beck et al. 2018).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,5 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Ludsin SA, DeVanna KM, Smith REH (2014) Physical-biological coupling and the challenge of understanding fish recruitment in freshwater lakes. Canadian Journal of Fisheries and Aquatic Sciences 71: 775-794.
 * Pennisi E (2018). Hybrids spawned Lake Victoria's rich fish diversity. Science 361: 539-539.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
+* Messager, M.L., Lehner, B., Grill, G., Nedeva, I., Schmitt, O. (2016): *Estimating the volume and age of water stored in global lakes using a geo-statistical approach*. **Nature Communications**: 13603. doi: [10.1038/ncomms13603](http://doi.org/10.1038/ncomms13603)
