--- a/_EFGs/F2.4.md
+++ b/_EFGs/F2.4.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F2.4
 biomecode: F2
 contributors: RT Kingsford, LJ Jackson, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Seasonal freeze-thaw cycles generate typically dimictic temperature stratificati
 Predominantly across the high latitude northern hemisphere and high altitude South America.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+Location of small and large lakes was taken from the HydroLAKES database (Messager et al. 2016), all lakes in boreal and polar climates were included (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>2.5%) and minor occurrences (< 2.5%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,5 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Adrian R, Walz N, Hintze, T, Hoeg S, Rusche R (1999) Effects of ice duration on plankton succession during spring in a shallow polymictic lake. Freshwater Biology 41: 621-634.
 * Bertilsson S, Burgin A, Carey CC, Fey SB, Grossart H, Grubisic LM, Jones ID, Kirillin G, Lennon JT, Shade A, Smyth RL (2013) The under-ice microbiome of seasonally frozen lakes. Limnology Oceanography 58: 1998–2012.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
+* Messager, M.L., Lehner, B., Grill, G., Nedeva, I., Schmitt, O. (2016): *Estimating the volume and age of water stored in global lakes using a geo-statistical approach*. **Nature Communications**: 13603. doi: [10.1038/ncomms13603](http://doi.org/10.1038/ncomms13603)
