--- a/_EFGs/F2.2.md
+++ b/_EFGs/F2.2.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F2.2
 biomecode: F2
 contributors: RT Kingsford, RC Mac Nally, LJ Jackson, F Essl, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ These lakes may be hydrologically isolated or connected to rivers, either termin
 Mainly in humid temperate and tropical regions, but usually not semi-arid or arid regions.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+Location of small lakes was taken from the HydroLAKES database (Messager et al. 2016), lakes in boreal and polar climates were excluded (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>2.5%) and minor occurrences (< 2.5%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,5 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Jeppesen E, Jensen JP, Søndergaard M, Lauridsen T, Pedersen LJ, Jensen L (1997) Top-down control in freshwater lakes: the role of nutrient state, submerged macrophytes and water depth. Hydrobiologia 342/343: 151-164.
 * Schindler DE, Scheuerell MD (2002) Habitat coupling in lake ecosystems. Oikos 98:177-189.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
+* Messager, M.L., Lehner, B., Grill, G., Nedeva, I., Schmitt, O. (2016): *Estimating the volume and age of water stored in global lakes using a geo-statistical approach*. **Nature Communications**: 13603. doi: [10.1038/ncomms13603](http://doi.org/10.1038/ncomms13603)
