--- a/_EFGs/F2.5.md
+++ b/_EFGs/F2.5.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F2.5
 biomecode: F2
 contributors: DJ Roux, RC Mac Nally, RT Kingsford, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Arid climates have highly variable hydrology. Episodic inundation after rain is 
 Semi-arid and arid regions at mid latitudes of the Americas, Africa, west and Asia and Australia.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+Location of intermitent wetlands and lakes was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004), lakes in boreal and polar climates were excluded (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -35,4 +35,5 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Meintjes S (1996) Seasonal changes in the invertebrate community of small shallow ephemeral pans at Bain's Vlei, South Africa. Hydrobiologia 317: 51-64.
 * Williams WD (2000) Biodiversity in temporary wetlands of dryland regions. Internationale Vereinigung für theoretische und angewandte Limnologie: Verhandlungen 27: 141-144.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Beck, H., Zimmermann, N., McVicar, T. et al. *Present and future Köppen-Geiger climate classification maps at 1-km resolution*. **Sci Data** 5, 180214 (2018). DOI: [10.1038/sdata.2018.214](https://doi.org/10.1038/sdata.2018.214)
+* Lehner, B. and Döll, P. (2004): *Development and validation of a global database of lakes, reservoirs and wetlands*. **Journal of Hydrology** 296/1-4: 1-22. [Data-set](https://www.worldwildlife.org/pages/global-lakes-and-wetlands-database)
