--- a/_EFGs/F2.7.md
+++ b/_EFGs/F2.7.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F2.7
 biomecode: F2
 contributors: RT Kingsford, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Ephemeral salt lakes are up to 10,000 km2 in area, and usually less than a few m
 Mostly in arid and semi-arid Africa, Eurasia, Australia and north and south America.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+Location of intermitent wetlands and lakes was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004) and overlapped with arid and semi-arid regions (calculated from Harris et al. 2014). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,5 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Williams WD (1998) Salinity as a determinant of the structure of biological communities in salt lakes. Hydrobiologia 381:191-201.
 * Seaman MT, Ashton PJ, Williams WD (1991) Inland salt waters of southern Africa. Hydrobiologia 210: 75-91.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Harris, I., Jones, P.D., Osborn, T.J. and Lister, D.H. (2014), *Updated high-resolution grids of monthly climatic observations - the CRU TS3.10 Dataset*. **International Journal of Climatology** 34, 623-642 [doi:10.1002/joc.3711](http://dx.doi.org/10.1002/joc.3711) [Revised appendix](https://crudata.uea.ac.uk/cru/data/hrg/Revised_Appendix_3_CLD.pdf)
+* Lehner, B. and Döll, P. (2004): *Development and validation of a global database of lakes, reservoirs and wetlands*. **Journal of Hydrology** 296/1-4: 1-22. [Data-set](https://www.worldwildlife.org/pages/global-lakes-and-wetlands-database)
