--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -35,4 +35,4 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Meyer JL, Wallace JB (2001) Lost linkages and lotic ecology: rediscovering small streams. Blackwell, Oxford.
 * Meyer JL, Strayer DL, Wallace JB, Eggert SL, Helfman GS, Leonard NE (2007) The contribution of headwater streams to biodiversity in river networks. Journal of the American Water Resources Association 43:  86–103.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008) *Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation*, **BioScience** 58: 403–414.
