--- a/_EFGs/F3.2.md
+++ b/_EFGs/F3.2.md
@@ -35,4 +35,4 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Kloskowski J, Green AJ, Polak M, Bustamante J, Krogulec J (2009) Complementary use of natural and artificial wetlands by waterbirds wintering in Doñana, south‐west Spain. Aquatic Conservation: marine and freshwater ecosystems, 19: 815-826.
 * Chester ET, Robson BJ (2013) Anthropogenic refuges for freshwater biodiversity: Their ecological characteristics and management. Biological Conservation 166: 64 – 75.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
+* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008) *Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation*, **BioScience** 58: 403–414.
