--- a/_EFGs/T7.4.md
+++ b/_EFGs/T7.4.md
@@ -34,5 +34,5 @@ The indicative distribution of Urban and infrastructure lands was estimated usin
 * Alberti M, Marzluff JM, Shulenberger E, Bradley G, Ryan C, Zumbrunnen C (2003) Integrating humans into ecology: opportunities and challenges for studying urban ecosystems. BioScience 53:1169-1179.
 * Grimm NB, Faeth SH, Golubiewski NE, Redman CL, Wu J, Bai X, Briggs JM (2008) Global change and the ecology of cities. Science 319: 756-760.
 ### Map References
-* VIIRS Day/Night Band Nighttime Lights, Version 1; Earth Observation Group, NOAA National Centers for Environmental Information (NCEI). Downloaded from: https://eogdata.mines.edu/download_dnb_composites.html
 * Cinzano P, Falchi F, C. D. Elvidge CD (2019). The world atlas of the artificial night sky brightness. Copyright Royal Astronomical Society. Reproduced from the Monthly Notices of the RAS by permission of Blackwell Science. (University of Padova & NOAA National Geophysical Data Center, Boulder) http://www.inquinamentoluminoso.it/worldatlas/pages/fig1.htm 
+* VIIRS Day/Night Band Nighttime Lights, Version 1; Earth Observation Group, NOAA National Centers for Environmental Information (NCEI). [Data-set]( https://eogdata.mines.edu/download_dnb_composites.html)
