Update reference list for maps, adding new T3.3 map

--- a/_EFGs/T3.3.md
+++ b/_EFGs/T3.3.md
@@ -5,7 +5,7 @@ realm: Terrestrial
 code: T3.3
 biomecode: T3
 contributors: DA Keith, F Essl, NA Brummitt
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith, P Pliscoff
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Unlike most other heathlands, these ecosystems have an overall water surplus, th
 Boreal and cool temperate coasts of western Europe and America, Azores, Magellanic region of South America, mostly at latitudes >40° latitude except where transitional with warm temperate heaths (e.g. France-Spain).
 
 {% capture map_det %}
-Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.
+Distribution of Cool temperate heathlands was assembled from ecosystem distribution map of Europe (European Commision 2016), landcover and ecoregions maps of North America (CEC 1997; Latifovic et al. 2016) and vegetation map from Chile (Luebert and Pliscoff 2006). Occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>60% occurrence) and minor occurrences (< 60% occurrence).
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,7 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Aerts R, Heil GW (1993) Heathlands: patterns and processes in a changing environment. Kluwer Academic Publishing.
 * Loidi J, Biurrun I, Juan Antonio Campos JA, García-Mijangos I, Herrera M (2010) A biogeographical analysis of the European Atlantic lowland heathlands. Journal of Vegetation Science 21: 832–842.
 ### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
+* Ecological Regions of North America--Toward a Common Perspective;  Commission for Environmental Cooperation; Montréal, Québec, Canada; 1997. [PDF](http://www3.cec.org/islandora/en/item/1701-ecological-regions-north-america-toward-common-perspective-en.pdf)
+* Mapping and Assessment of Ecosystems and their Services: Mapping and assessing the condition of Europe's ecosystems: progress and challenges. Final Report. European Commision Technical report – 2016 – 095 [PDF](https://www.eea.europa.eu/data-and-maps/data/ecosystem-types-of-europe-1)
+* Latifovic, R., Homer, C., Ressl, R., Pouliot, D., Hossain, S.N., Colditz, R.R., Olthof, I., Giri, C., Victoria, A., 2016. North American land change monitoring system. In: Giri, C., (Ed), Remote Sensing of Land Use and Land Cover: Principles and Applications, CRC-Press, pp. 303-324. DOI: [10.1201/b11964](https://doi.org/10.1201/b11964)
+* Luebert, F. and Pliscoff, P. (2006) **Sinopsis bioclimática y vegetacional de Chile**.  Editorial Universitaria. Santiago de Chile.
