--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F1.1
 biomecode: F1
 contributors: RT Kingsford, RC Mac Nally, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ These streams have flow regimes with high velocity and relatively low but reliab
 In steep to moderate terrain throughout the humid tropical and temperate zones, rarely extending to boreal latitudes.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+The distribution of permanent upland streams was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .
 {% endcapture %}
 {% include MAP.html %}
 
@@ -35,4 +35,4 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Meyer JL, Wallace JB (2001) Lost linkages and lotic ecology: rediscovering small streams. Blackwell, Oxford.
 * Meyer JL, Strayer DL, Wallace JB, Eggert SL, Helfman GS, Leonard NE (2007) The contribution of headwater streams to biodiversity in river networks. Journal of the American Water Resources Association 43:  86–103.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008) *Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation*, **BioScience** 58: 403–414.
+* Ouellet Dallaire, C., Lehner, B., Sayre, R., Thieme, M. (2018): *A multidisciplinary framework to derive global river reach classifications at high spatial resolution*. **Environmental Research Letters** 14: 024003. DOI: [10.1088/1748-9326/aad8e9](https://doi.org/10.1088/1748-9326/aad8e9)
