--- a/_EFGs/F1.4.md
+++ b/_EFGs/F1.4.md
@@ -5,7 +5,7 @@ realm: Freshwater
 code: F1.4
 biomecode: F1
 contributors: RT Kingsford, DA Keith
-mapcontributors: DA Keith, JR Ferrer-Paris
+mapcontributors: JR Ferrer-Paris, DA Keith
 version: v1.0, 2020-01-20 12:00:00
 ---
 # Ecological Traits
@@ -25,7 +25,7 @@ Flow and flood regimes in these rivers are highly variable between monsoon and d
 Elevated regions in n tropical and subtropical monsoonal climates worldwide.
 
 {% capture map_det %}
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+The distribution of Monsoonal upland stream was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,4 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Davies PM, Bunn SE, Hamilton SK (2008) Primary production in tropical streams and rivers. In: Tropical stream ecology (Ed. D Dudgeon), pp. 23–42. Academic Press, London.
 * de Carvalho RA., Tejerina-Garro FL. (2018) Headwater-river gradient: trait-based approaches show functional dissimilarities among tropical fish assemblages. Marine and Freshwater Research 69: 574-584.
 ### Map References
-* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008) *Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation*, **BioScience** 58: 403–414.
+* Ouellet Dallaire, C., Lehner, B., Sayre, R., Thieme, M. (2018): *A multidisciplinary framework to derive global river reach classifications at high spatial resolution*. **Environmental Research Letters** 14: 024003. DOI: [10.1088/1748-9326/aad8e9](https://doi.org/10.1088/1748-9326/aad8e9)
