long overdue changes

--- a/_EFGs/T2.1.md
+++ b/_EFGs/T2.1.md
@@ -1,5 +1,5 @@
 ---
-name: T2.1 Boreal and temperate montane forests and woodlands
+name: T2.1 Boreal and temperate high montane forests and woodlands
 biome: T2. Temperate-boreal forests and woodlands biome
 realm: Terrestrial
 code: T2.1
