--- a/_EFGs/T7.3.md
+++ b/_EFGs/T7.3.md
@@ -25,7 +25,7 @@ High to moderate natural availability of water and nutrients is supplemented by 
 Tropical to cool temperate humid climatic zones or river flats in dry climates across south sub-Saharan and Mediterranean Africa, Europe, Asia, southern Australia, Oceania, and the Americas.
 
 {% capture map_det %}
-The distribution for this functional group is based on distribution maps of IUCN habitat type _14.3 Plantations_ (Jung et al. 2020).
+Major occurrences of plantations were taken from the map of Habitat type 14.3 by Jung et al. (2020) based on the IUCN Habitats Classification Scheme v3.1 (IUCN 2012). We compared this to cropping areas in consensus land-cover maps (Tuanmu et al., 2014) and found that maps of Jung et al. (2020) more closely matched the concept of T7.3.
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,4 @@ The distribution for this functional group is based on distribution maps of IUCN
 * Kanninen M (2010) Plantation forests: global perspectives. In: ‘Ecosystem goods and services from plantation forests’ (Eds. J Bauhus, PJ van der Meer, M Kanninen), pp1-15. Earthscan, London.
 * Monfreda CN, Ramankutty N, Foley JA (2008) Farming the planet: 2. Geographic distribution of crop areas, yields, physiological types, and net primary production in the year 2000. Global Biogeochemical Cycles 22: GB1022. 
 ### Map References
-* Martin Jung, Prabhat Raj Dahal, Stuart H. M. Butchart, Paul F. Donald, Xavier De Lamo, Myroslava Lesiv, ... Piero Visconti. (2020). *A global map of terrestrial habitat types* (Version 001_full) [Data set]. **Zenodo**. DOI: [10.5281/zenodo.3673586](http://doi.org/10.5281/zenodo.3673586)
+* Martin Jung, Prabhat Raj Dahal, Stuart H. M. Butchart, Paul F. Donald, Xavier De Lamo, Myroslava Lesiv, ... Piero Visconti. (2020). *A global map of terrestrial habitat types* [Data set]. **Zenodo**. DOI: [10.5281/zenodo.3673586](http://doi.org/10.5281/zenodo.3673586)
