--- a/_EFGs/T1.1.md
+++ b/_EFGs/T1.1.md
@@ -25,7 +25,7 @@ Precipitation exceeds evapotranspiration with low intra- and inter-annual variab
 Humid tropical and subtropical regions in Central and West Africa, Southeast Asia, Oceania, northeast Australia, Central and tropical South America and the Caribbean. 
 
 {% capture map_det %}
-Major and minor occurrences were initially identified using consensus land-cover maps (Tuanmu et al. 2014) and then cropped to selected terrestrial ecoregions (Dinerstein et al. 2017) at 30 arc seconds spatial resolution. Ecoregions were selected if: i) their descriptions mentioned features consistent with those identified in the profile of the Ecosystem Functional Group; and ii) if their location was consistent with the ecological drivers described in the profile.
+Major and minor occurrences were initially identified using consensus land-cover maps (Tuanmu et al. 2014) and then cropped to selected terrestrial ecoregions (Dinerstein et al. 2017; DAWE 2012) at 30 arc seconds spatial resolution. Ecoregions were selected if: i) their descriptions mentioned features consistent with those identified in the profile of the Ecosystem Functional Group; and ii) if their location was consistent with the ecological drivers described in the profile.
 {% endcapture %}
 {% include MAP.html %}
 
@@ -35,5 +35,6 @@ Major and minor occurrences were initially identified using consensus land-cover
 * Ashton PS, Seidler R (2014) ‘On the forests of tropical Asia: lest the memory fade.’ (Kew Publishing: Kew)
 
 ### Map References
+* Department of Agriculture, Water and the Environment (2012), Interim Biogeographic Regionalisation for Australia v. 7 (IBRA) [ESRI shapefile] Available from http://intspat01.ris.environment.gov.au/fed/catalog/search/resource/details.page?uuid=%7B3C182B5A-C081-4B56-82CA-DF5AF82F86DD%7D
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) *An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm*, **BioScience** 67: 534–545. DOI:[10.1093/biosci/bix014](https://doi.org/10.1093/biosci/bix014). [Data-set available on-line](https://ecoregions2017.appspot.com/)
 * Tuanmu, M.-N. and W. Jetz. 2014. A global 1-km consensus land-cover product for biodiversity and ecosystem modeling. Global Ecology and Biogeography 23(9): 1031-1045.
