--- a/_EFGs/T7.1.md
+++ b/_EFGs/T7.1.md
@@ -25,7 +25,7 @@ The high to moderate natural availability of water (from at least seasonally hig
 Tropical to temperate humid climatic zones or river flats in dry climates across south sub-Saharan and North Africa, Europe, Asia, southern Australia, Oceania, and the Americas.
 
 {% capture map_det %}
-The distribution for this functional group is based on distribution maps of IUCN habitat type _14.1 Arable Land_ (Jung et al. 2020).
+Major occurrences of croplands were taken from the map of Habitat type 14.1 by Jung et al. (2020) based on the IUCN Habitats Classification Scheme v3.1 (IUCN 2012). We compared this to cropping areas in consensus land-cover maps (Tuanmu et al., 2014) and found that maps of Jung et al. (2020) more closely matched the concept of T7.1.
 {% endcapture %}
 {% include MAP.html %}
 
@@ -34,4 +34,4 @@ The distribution for this functional group is based on distribution maps of IUCN
 * Leff B, Ramankutty N, Foley JA (2004) Geographic distribution of major crops across the world. Global Biogeochemical Cycles 18(1), GB1009.
 * Ray DK., Foley JA (2013) Increasing global crop harvest frequency: recent trends and future directions. Environmental Research Letters 8(4): 044041.
 ### Map References
-* Martin Jung, Prabhat Raj Dahal, Stuart H. M. Butchart, Paul F. Donald, Xavier De Lamo, Myroslava Lesiv, ... Piero Visconti. (2020). *A global map of terrestrial habitat types* (Version 001_full) [Data set]. **Zenodo**. DOI: [10.5281/zenodo.3673586](http://doi.org/10.5281/zenodo.3673586)
+* Martin Jung, Prabhat Raj Dahal, Stuart H. M. Butchart, Paul F. Donald, Xavier De Lamo, Myroslava Lesiv, ... Piero Visconti. (2020). *A global map of terrestrial habitat types* [Data set]. **Zenodo**. DOI: [10.5281/zenodo.3673586](http://doi.org/10.5281/zenodo.3673586)
